Added azure package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+azure==1.0.2
 azure-common==1.0.0
+azure-mgmt==0.20.1
 azure-mgmt-common==0.20.0
 azure-mgmt-compute==0.20.0
 azure-mgmt-network==0.20.1
@@ -8,7 +10,7 @@ azure-mgmt-storage==0.20.0
 azure-nspkg==1.0.0
 azure-servicebus==0.20.1
 azure-servicemanagement-legacy==0.20.1
-azure-storage==0.20.3
+azure-storage==0.20.2
 Flask==0.10.1
 futures==3.0.3
 itsdangerous==0.24
